--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,31 @@
 			<artifactId>resteasy-jackson-provider</artifactId>
 			<version>3.0.13.Final</version>
 		</dependency>
+        <dependency>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-core</artifactId>
+            <version>[4.0,)</version>
+        </dependency>
 
-	</dependencies>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-jaxrs</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>angular-swagger-ui</artifactId>
+            <version>0.3.2</version>
+        </dependency>
+
+    </dependencies>
 	<build>
 		<defaultGoal>install</defaultGoal>
 		<plugins>
